This is my GTKY Page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,71 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Page Title</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Zee Albaz Personal Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1>This is a Heading</h1>
-	<p>This is a paragraph.</p>
+    <!-- Heading section containing the name -->
+    <header>
+        <h1>Zee Albaz</h1>
+    </header>
+
+    <!-- Email and photo section containing the email link and image -->
+    <section id="contact">
+        <div class="details">
+            Email: <a href="mailto:hamzehoalbaz@lewisu.edu">hamzehoalbaz@lewisu.edu</a>
+            <p>Discord: Winningmind101</p>
+        </div>
+        
+        <div id="photo">
+            <img src="Image/photo.jpg" alt="Zee Albaz Photo">
+        </div>
+    </section>
+
+<!-- Introduction section -->
+<section id="introduction">
+    <h2>Introduction</h2>
+    <p>My name is Hamzeh and I’m a Senior at Lewis University majoring in Computer Science with a concentration in Artificial Intelligence. I was born in Dallas, Texas but grew up in Saudi Arabia with my family. 
+        At the age of 17 I moved to the US to get my degree and continue my journey of making it in life. 
+        I enjoy going to the gym, cooking, and playing soccer with friends whenever I have free time. I currently work full time and go to school full while trying to maintain a healthy lifestyle.</p>
+</section>
+
+<!-- What I Hope to Learn in this Course section -->
+<section id="courseObjectives">
+    <h2>What I Hope to Learn in this Course</h2>
+    <ul>
+        <li>Building Applications and Projects related to my field.</li>
+        <li>Understanding SAAS</li>
+        <li>Utilizing GitHub more</li>
+        <li>Being proficient in using Azure</li>
+        <li>Being able to build projects that will help me list them on my resume.</li>
+    </ul>
+</section>
+
+<!-- My Favorite Hobby/Activity section -->
+<section id="hobby">
+    <h2>My Favorite Hobby / Activity</h2>
+    <p>My favorite hobby would be going to the gym and exercising. Exercising helps me relax my mind and release stress that I constantly face on a day-to-day basis. Plus, it helps me stay disciplined by going there every day. I do love cooking as well or to be specific, meal prepping which helps me stay on a specific diet that I follow to stay healthy and active.</p>
+</section>
+
+<!-- Fun Fact section -->
+<section id="funFact">
+    <h2>Fun Fact</h2>
+    <p>A nice fun fact about myself is that I grew up in Saudi Arabia for 17 years. Finished high school there and enjoyed meeting people from around the world. Additionally, another fun fact about myself is that I learned how to speak English, Arabic, French, and Spanish!</p>
+</section>
+
+<!-- Greatest Innovation section -->
+<section id="greatestInnovation">
+    <h2>Greatest Innovation</h2>
+    <ul class="square-icons-list">
+        <li><a href="https://www.aps.org/publications/apsnews/200110/history.cfm#:~:text=In%201821%2C%20Babbage%20invented%20the,engineering%20of%20the%2019th%20century." target="_blank">First Computer: “Difference Engine” – 1821</a></li>
+        <li><a href="https://www.britannica.com/technology/Analytical-Engine" target="_blank">First General Purpose Computer: Analytical Engine – 1834</a></li>
+        <li><a href="https://www.britannica.com/technology/ENIAC" target="_blank">First General Purpose Programmable Electronic Computer: ENIAC (1946)</a></li>
+    </ul>
+</section>
+
 </body>
 </html>
