Fixing broken image

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         
         <div id="photo">
-            <img src="Image/photo.jpg" alt="Zee Albaz Photo">
+            <img src="/image/photo.jpg" alt="Zee Albaz Photo">
         </div>
     </section>
 
